--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 click==7.1.2
 Flask==1.1.4
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+numpy==2.1.1
+opencv-python==4.10.0.84
+packaging==24.1
 pytz==2023.3.post1
 Werkzeug==1.0.1
